# kv-sparsity-bench

./: .gitignore  AGENTS.md  LOOP.md  README.md  STATE.md  download_papers.py  loop-budget.md  loop-constraints.md  loop-run-log.md  pyproject.toml  requirements.txt
bench/: __init__.py  runner.py
bench/core/: __init__.py  budget_controller.py  cache_manager.py  hook_manager.py  score_buffer.py
bench/metrics/: __init__.py
bench/models/: loader.py
bench/strategies/: __init__.py  base.py  baseline.py  curdkv.py  h2o.py  mustafar.py  rocketkv.py  snapkv.py
bench/tasks/: __init__.py  base.py  needle.py  perplexity.py
configs/: default.yaml
data/: pg19_100k.txt  pg19_test.txt  wikitext103_50k.txt  wikitext103_test.txt
data/test-corpus/: test.txt
docs/: report.md  roadmap.md
docs/plans/: 2026-07-09-kv-sparsity-bench-design.md
kv_sparsity_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/Qwen2.5-0.5B-hf/: config.json
models/tiny-test/: config.json  generation_config.json  tokenizer_config.json
models/tiny-test-v2/: config.json  generation_config.json  tokenizer_config.json  vocab.json
results/: baseline_perplexity.json  comparison.json  full_comparison.json  gen_comparison.json  pg19_results.json  ppl_comparison.json  qwen_wikitext.json
scripts/: run_benchmark.py
